--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="container">
       <div class="imgs-container">
         <div>
-          <img class="product-img" src="./images/image-product-1.jpg" alt="product image 1">
+          <img class="product-img show-lightbox" src="./images/image-product-1.jpg" alt="product image 1">
         </div>
         <div class="desktop thumbs">
           <div>
@@ -119,7 +119,36 @@
           </div>
         </div>
       </div>
-
+      <div class="desktop lightbox">
+        <div class="remove-lightbox">
+          <img src="./images/icon-close.svg" alt="close icon">
+        </div>
+        <div>
+          <img class="product-img" src="./images/image-product-1.jpg" alt="product image 1">
+        </div>
+        <div class="desktop thumbs">
+          <div>
+            <img class="active" src="./images/image-product-1-thumbnail.jpg" alt="product thumbnail img" data-id="0">
+          </div>
+          <div>
+            <img src="./images/image-product-2-thumbnail.jpg" alt="product thumbnail img" data-id="1">
+          </div>
+          <div>
+            <img src="./images/image-product-3-thumbnail.jpg" alt="product thumbnail img" data-id="2">
+          </div>
+          <div>
+            <img src="./images/image-product-4-thumbnail.jpg" alt="product thumbnail img" data-id="3">
+          </div>
+        </div>
+        <div class=" desktop-arrows">
+          <div class="flex-center previous-arrow">
+            <img src="./images/icon-previous.svg" alt="previous arrow icon">
+          </div>
+          <div class="flex-center next-arrow">
+            <img src="./images/icon-next.svg" alt="next arrow icon">
+          </div>
+        </div>
+      </div>
       <div class="info-container">
         <h3>Sneaker Company</h3>
         <h1>Fall Limited Edition Sneakers</h1>
